--- a/.gitignore
+++ b/.gitignore
@@ -180,6 +180,9 @@ cython_debug/
 data/stooq/
 data/fashion_mnist/
 data/mnist/
+data/nasdaq100/
+data/financial-statement-notes-data-sets/
+02_market_and_fundamental_data/01_NASDAQ_TotalView-ITCH_Order_Book/data/
 dcgan/
 time_gan/
 results/
